tests/integration/commands/snapshots/integration__commands__help__long_help.snap
---
source: tests/integration/commands/help.rs
expression: output.snapshot_display()
---
args: ["--help"]
status: 0
success: true
stdin ---

stdout ---
jjpwrgem json parser with really good error messages

Usage: jjp <COMMAND>

Commands:
  format  Make your json look really good
  check   Validates json syntax

Options:
  -h, --help     Print help
  -V, --version  Print version

jjpwrgem is a tool for formatting and validating json inputs

Examples:
	$ echo -en "{ \"rust\":\"is a must\"   } " | jjp format
	{
	    "rust": "is a must"
	}

	$ echo -en "{\"coolKey\"}" | jjp check
	error: expected colon after key, found `}`
	 --> stdin:1:11
	  |
	1 | {"coolKey"}
	  |  ---------^
	  |  |
	  |  expected due to `"coolKey"`
	  |
	help: insert colon and placeholder value
	  |
	1 | {"coolKey": "🐟🛹"}
	  |           ++++++++

Run jjp <COMMAND> --help for information about specific commands

stderr ---
